--- a/Reference/Reference/Reference.vcxproj.filters
+++ b/Reference/Reference/Reference.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="Reference.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Sample.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
